force-app/main/default/objects/DadoBancario__c/DadoBancario__c.object-meta.xml
<CustomObject>
    <label>Dado bancário</label>
    <nameField>
        <displayFormat>DB-{0000}</displayFormat>
        <label>Dado bancário</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dados bancários</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>