force-app/main/default/objects/DadoBancario__c/fields/Banco__c.field-meta.xml
<CustomField>
    <fullName>Banco__c</fullName>
    <label>Banco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banco do Brasil (BB)</fullName>
            </value>
            <value>
                <fullName>Caixa Econômica Federal (CEF)</fullName>
            </value>
            <value>
                <fullName>Banco Bradesco</fullName>
            </value>
            <value>
                <fullName>Banco Itaú Unibanco</fullName>
            </value>
            <value>
                <fullName>Banco Santander Brasil</fullName>
            </value>
            <value>
                <fullName>Banco BTG Pactual</fullName>
            </value>
            <value>
                <fullName>Banco Safra</fullName>
            </value>
            <value>
                <fullName>Banco Votorantim</fullName>
            </value>
            <value>
                <fullName>Banco Original</fullName>
            </value>
            <value>
                <fullName>Banco Inter</fullName>
            </value>
            <value>
                <fullName>Banco PAN</fullName>
            </value>
            <value>
                <fullName>Banco Neon</fullName>
            </value>
            <value>
                <fullName>Banco Mercantil do Brasil</fullName>
            </value>
            <value>
                <fullName>Banco Daycoval</fullName>
            </value>
            <value>
                <fullName>Banco BMG</fullName>
            </value>
            <value>
                <fullName>Banco Pine</fullName>
            </value>
            <value>
                <fullName>Banco Sofisa Direto</fullName>
            </value>
            <value>
                <fullName>Banco Modal</fullName>
            </value>
            <value>
                <fullName>Banco C6</fullName>
            </value>
            <value>
                <fullName>Banco Digio</fullName>
            </value>
            <value>
                <fullName>246-Banco ABC Brasil S.A.</fullName>
            </value>
            <value>
                <fullName>299-Banco Afinz S.A. Banco Múltiplo</fullName>
            </value>
            <value>
                <fullName>121-Banco Agibank S.A.</fullName>
            </value>
            <value>
                <fullName>025-Banco Alfa S.A.</fullName>
            </value>
            <value>
                <fullName>065-Banco Andbank (Brasil) S.A.</fullName>
            </value>
            <value>
                <fullName>084 - Banco uniprime</fullName>
            </value>
            <value>
                <fullName>096-Banco B3 S.A.</fullName>
            </value>
            <value>
                <fullName>024-Banco BANDEPE S.A.</fullName>
            </value>
            <value>
                <fullName>318-Banco BMG S.A.</fullName>
            </value>
            <value>
                <fullName>752-Banco BNP Paribas Brasil S.A.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>