force-app/main/default/objects/DadoBancario__c/fields/Chave_Pix__c.field-meta.xml
<CustomField>
    <fullName>Chave_Pix__c</fullName>
    <label>Chave Pix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>