force-app/main/default/objects/DadoBancario__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Dados bancários</relationshipLabel>
    <relationshipName>DadosBancarios</relationshipName>
    <type>Lookup</type>
</CustomField>