force-app/main/default/objects/DadoBancario__c/fields/DV__c.field-meta.xml
<CustomField>
    <fullName>DV__c</fullName>
    <label>DV</label>
    <length>3</length>
    <type>Text</type>
</CustomField>