force-app/main/default/objects/DadoBancario__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Dados bancários</relationshipLabel>
    <relationshipName>DadosBancarios</relationshipName>
    <type>Lookup</type>
</CustomField>