force-app/main/default/objects/DadoBancario__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conta poupança</fullName>
            </value>
            <value>
                <fullName>Conta corrente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>