force-app/main/default/objects/DadoBancario__c/validationRules/ImpedePercentualInvestimentoInvalido.validationRule-meta.xml
<ValidationRule>
    <fullName>ImpedePercentualInvestimentoInvalido</fullName>
    <active>true</active>
    <description>Impede que um valor maior que 100 ou menor que 0 seja digitado no campo &quot;% de investimento&quot;.</description>
    <errorConditionFormula>OR(
PercentualInvestimento__c &gt; 1,
PercentualInvestimento__c &lt; 0
)</errorConditionFormula>
    <errorDisplayField>PercentualInvestimento__c</errorDisplayField>
    <errorMessage>O % de investimento deve ser um valor entre 0 e 100.</errorMessage>
</ValidationRule>