force-app/main/default/objects/DadoBancario__c/validationRules/TipoObrigatorioInvestimentos.validationRule-meta.xml
<ValidationRule>
    <fullName>TipoObrigatorioInvestimentos</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     Lead__r.UnidadeNegocio__c == &quot;Investimentos&quot;,
     ISPICKVAL(Tipo__c, &apos;&apos;)
)</errorConditionFormula>
    <errorMessage>Informe o tipo do dado bancário.</errorMessage>
</ValidationRule>